--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/TheSecondLab/FunSeeLogger#readme",
   "dependencies": {
-    "winston": "^2.4.1"
+    "winston": "^2.4.1",
+    "winston-daily-rotate-file": "^3.3.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
